--- a/Topic Bank Github.ipynb
+++ b/Topic Bank Github.ipynb
@@ -426,7 +426,7 @@
     "def make_trigram(texts):\n",
     "    return [trigram_mod[bigram_mod[doc]] for doc in texts]\n",
     "\n",
-    "# Form Bigrams from Gensim.models.phrases\n",
+    "# Form Trigrams from Gensim.models.phrases\n",
     "data_words_trigrams = make_trigram(data_words_nostops)"
    ]
   },
@@ -901,7 +901,7 @@
     "\n",
     "    compute_coherence_values\n",
     "    \n",
-    "<u>Note</u> that we trained our model to find topics between the range of 2 to 40 topics at an interval of 6."
+    "<u>Note</u> that we trained our model to find topics between the range of 2 to 12 topics at an interval of 1."
    ]
   },
   {
@@ -929,7 +929,7 @@
     "# coherence_model_ldamallet = CoherenceModel(model=ldamallet, texts=data_lemmatized, dictionary=id2word, coherence=\"c_v\")\n",
     "\n",
     "# compute a list of LdaMallets models\n",
-    "model_list, coherence_values = compute_coherence_values(dictionary=id2word, corpus=corpus, texts=data_lemmatized, start=2, limit=40, step=6)"
+    "model_list, coherence_values = compute_coherence_values(dictionary=id2word, corpus=corpus, texts=data_lemmatized, start=2, limit=12, step=1)"
    ]
   },
   {
