--- a/Topic Bank Github.ipynb
+++ b/Topic Bank Github.ipynb
@@ -737,18 +737,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# 9 Finding the Optimal Number of Topics for LDA Mallet Model"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "We will use the following function to run our **LDA Mallet Model**:\n",
     "\n",
@@ -761,7 +757,6 @@
    "cell_type": "code",
    "execution_count": 24,
    "metadata": {
-    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -808,7 +803,6 @@
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {
-    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -837,9 +831,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "With our models trained, and the performances visualized, we can see that the optimal number of topics here is **10 topics** with a Coherence Score of **0.43** which is slightly higher than our previous results at 0.41. However, we can also see that the model with a coherence score of 0.43 is also the highest scoring model, which implies that there are a total 10 dominant topics in this document.\n",
     "\n",
@@ -850,7 +842,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "hidden": true,
     "scrolled": true
    },
    "outputs": [],
@@ -863,20 +854,17 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "By using our **Optimal LDA Mallet Model** using Gensim's Wrapper package, we displayed the 10 topics in our document along with the top 10 keywords and their corresponding weights that makes up each topic.\n",
     "\n",
-    "<u>Note</u> that output were omitted for privacy protection.. However the actual output is a list of the 10 topics, and each topic shows the top 10 keywords and their corresponding weights that makes up the topic."
+    "<u>Note</u> that output were omitted for privacy protection. However the actual output is a list of the 10 topics, and each topic shows the top 10 keywords and their corresponding weights that makes up the topic."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "## 9.1 Visual the Optimal LDA Mallet Model"
