--- a/Topic Bank Github.ipynb
+++ b/Topic Bank Github.ipynb
@@ -685,7 +685,7 @@
     "hidden": true
    },
    "source": [
-    "After building the LDA Mallet Model using Gensim's Wrapper package, here we see our 7 new topics in the document along with the top 10 keywords and their corresponding weights that makes up each topic.\n",
+    "After building the LDA Mallet Model using Gensim's Wrapper package, here we see our 9 new topics in the document along with the top 10 keywords and their corresponding weights that makes up each topic.\n",
     "\n",
     "<u>Note</u> that output were omitted for privacy protection. However the actual output is a list of the 9 topics, and each topic shows the top 10 keywords and their corresponding weights that makes up the topic."
    ]
@@ -737,14 +737,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# 9 Finding the Optimal Number of Topics for LDA Mallet Model"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "We will use the following function to run our **LDA Mallet Model**:\n",
     "\n",
@@ -757,6 +761,7 @@
    "cell_type": "code",
    "execution_count": 24,
    "metadata": {
+    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -803,6 +808,7 @@
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {
+    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -831,7 +837,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "With our models trained, and the performances visualized, we can see that the optimal number of topics here is **10 topics** with a Coherence Score of **0.43** which is slightly higher than our previous results at 0.41. However, we can also see that the model with a coherence score of 0.43 is also the highest scoring model, which implies that there are a total 10 dominant topics in this document.\n",
     "\n",
@@ -842,6 +850,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "hidden": true,
     "scrolled": true
    },
    "outputs": [],
@@ -854,7 +863,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "By using our **Optimal LDA Mallet Model** using Gensim's Wrapper package, we displayed the 10 topics in our document along with the top 10 keywords and their corresponding weights that makes up each topic.\n",
     "\n",
@@ -864,7 +875,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "## 9.1 Visual the Optimal LDA Mallet Model"
