--- a/Topic Bank Github.ipynb
+++ b/Topic Bank Github.ipynb
@@ -56,7 +56,7 @@
     "<br>\n",
     "\n",
     "**Assumption:**\n",
-    "- I have taken data from with a sample size of 511, and assuming that this dataset is sufficient to capture the topics in the rationale\n",
+    "- We are using data with a sample size of 511, and assuming that this dataset is sufficient to capture the topics in the rationale\n",
     "- We're also assuming that the results in this model is applicable in the same way if we were to train an entire population of the rationale dataset with the exception of few parameter tweaks\n",
     "<br>\n",
     "<br>\n",
